# neewer-python

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INSTALL-WINDOWS.md
examples/: hello.py  typed_api.py
neewer/: __init__.py  bluez.py  catalog.py  cli.py  devices.py  effects.py  errors.py  fleet.py  grammar.py  ota.py  testing.py  transport.py
neewer/protocol/: __init__.py  commands.py  dmx.py  frames.py  identity.py  models.py  replies.py
tests/: conftest.py  test_bluez.py  test_catalog.py  test_cli.py  test_commands.py  test_devices.py  test_dmx.py  test_effects.py  test_fleet.py  test_fleet_async.py  test_frames.py  test_frames_by_channel.py  test_grammar.py  test_identity.py  test_models.py  test_ota.py  test_passive_scan.py  test_query_frames.py  test_replies.py  test_testing.py  test_write_governor.py
