[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neewer"
version = "0.1.0"
description = "Python control library for Neewer TL-series RGB tube lights over Bluetooth LE"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bengt-Erik Norum", email = "bengt@bengt.org" }]
keywords = ["neewer", "ble", "bluetooth", "rgb", "light", "tl120c", "tl90c"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]
dependencies = ["bleak>=3.0.2"]

[project.urls]
Homepage = "https://github.com/verygeeky/neewer-python"
Documentation = "https://github.com/verygeeky/neewer-hardware"
Issues = "https://github.com/verygeeky/neewer-python/issues"

[project.optional-dependencies]
test = ["pytest>=8"]                       # hardware-free unit suite (bleak stubbed)
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
neewer = "neewer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["neewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
# 100 cols matches the hand-wrapped width of the source; we lint but never
# `ruff format` -- it would collapse the column-aligned magic-byte comments and
# re-case the verbatim protocol bytes, both of which are load-bearing.
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
